main/bin/main.120694.temp/ioc.log
Using build options: -cl-std=CL1.2 -g -s "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl" -Xclang -O3 -Xclang -Wuninitialized -Xclang -DINTELFPGA_CL=201 -Xclang -ivfsoverlay-lib/home/leifu/intelFPGA_pro/20.1/hld/linux64/lib/libaoc_clang_decrypt.so -I "/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device"
Setting target instruction set architecture to: Default (Intel(R) Advanced Vector Extensions 2 (Intel(R) AVX2))
Platform name: Intel(R) FPGA Emulation Platform for OpenCL(TM)
Device name: Intel(R) FPGA Emulation Device
Device version: OpenCL 1.2 
Device vendor: Intel(R) Corporation
Device profile: EMBEDDED_PROFILE
Compilation started
In file included from /home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:1:
In file included from /home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/Models.h:1:
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/host/src/InfStat.h:39:6: warning: scoped enumerations are a C++11 extension
enum struct Severity {
     ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:7:48: error: parameter may not be qualified with an address space
                         __global struct Param P,
                                               ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:8:49: error: parameter may not be qualified with an address space
                         __global struct Person person,
                                                ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:9:52: error: parameter may not be qualified with an address space
                         __global struct Household household,
                                                   ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:7:48: error: struct kernel parameters may not contain pointers
                         __global struct Param P,
                                               ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/Models.h:3:8: note: within field of type 'Param' declared here
struct Param
       ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/Models.h:11:10: note: field of illegal pointer type '__private double *' declared here
        double* HouseholdDenomLookup;
                ^
/home/leifu/agent_based_epidemic_simulation_using_fpga/main/device/main.cl:11:1: error: expected identifier or '('
{
^
Compilation failed
Failed to build program...: -15 (CL_COMPILE_PROGRAM_FAILURE)
Compilation failed!
